Add VM options to GUI surefire tests